<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:add="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/save"
        android:title="@string/save_the_content"
        add:showAsAction="always"
        android:icon="@drawable/icons8_save_as_100">
    </item>
    <item
        android:id="@+id/setting"
        android:title="@string/setting"
        add:showAsAction="always"
        android:icon="@drawable/icons8_automatic_100">
    </item>
    <item
        android:id="@+id/open"
        android:title="@string/read_content"
        add:showAsAction="never">
    </item>
    <item
        android:id="@+id/delete"
        android:title="@string/delete_the_content"
        add:showAsAction="never">
    </item>
    <item
        android:id="@+id/update"
        android:title="@string/update_system"
        add:showAsAction="never">
    </item>

</menu>